Create transactions api method for block-explorer

--- a/config/src/main/resources/application.conf
+++ b/config/src/main/resources/application.conf
@@ -4,6 +4,7 @@ block-explorer {
   }
   elasticsearch {
     url = "vpc-es-block-explorer-2ubbjlfih5nnvuli64w76jbja4.us-west-1.es.amazonaws.com"
+    port = "80"
     indexes {
       snapshots = "snapshots"
       transactions = "transactions"
