Fallback to ElasticSearch V2 in case of failure

--- a/v1/config/src/main/resources/application.conf
+++ b/v1/config/src/main/resources/application.conf
@@ -4,6 +4,7 @@ block-explorer {
   }
   elasticsearch {
     url = "vpc-cl-block-explorer-mainnet-oestvncnt6x5iwmavvd5wrcday.us-west-1.es.amazonaws.com"
+    urlV2 = "vpc-cl-block-explorer-mainnet-v2-56cvss6nnmg7vnvca2c6alln4y.us-west-1.es.amazonaws.com"
     port = "80"
     indexes {
       snapshots = "snapshots"
