--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "handler.ts",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.7.1",
+    "aws-lambda": "^1.0.6",
+    "fp-ts": "^2.7.0",
     "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.59",
     "@types/node": "^14.0.13"
   },
   "scripts": {
