--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,6 +10,12 @@
     "lib": [
       "es2015"
     ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "types": [
+      "node"
+    ],
     "rootDir": "./"
   }
 }
