Add timestamps to CheckpointBlock, Snapshot and Transaction

--- a/v1/config/src/main/resources/application.conf
+++ b/v1/config/src/main/resources/application.conf
@@ -1,9 +1,9 @@
 block-explorer {
   sqs {
-    url = "https://sqs.us-west-1.amazonaws.com/996912279182/cl-block-explorer_queue-mainnet"
+    url = ""
   }
   elasticsearch {
-    url = "vpc-cl-block-explorer-mainnet-v2-56cvss6nnmg7vnvca2c6alln4y.us-west-1.es.amazonaws.com"
+    url = ""
     port = "80"
     indexes {
       snapshots = "snapshots"
