--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^14.0.13"
   },
   "scripts": {
+    "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT"
