--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "handler.ts",
+  "main": "src/handler.ts",
   "dependencies": {
     "@elastic/elasticsearch": "^7.7.1",
     "aws-lambda": "^1.0.6",
