--- a/.github/workflows/deploy_mainnet.yml
+++ b/.github/workflows/deploy_mainnet.yml
@@ -1,10 +1,9 @@
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  release:
+    types:
+      - created
 
-name: API - deploy serverless
+name: Deploy mainnet serverless
 
 jobs:
   deploy:
@@ -17,12 +16,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - uses: olegtarasov/get-tag@v2
-        id: tagName
-        with:
-          tagRegex: "v(.*)"
-          tagRegexGroup: 1
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -33,16 +26,6 @@ jobs:
 
       - name: Compile
         run: npm run typecheck
-
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v1
-        with:
-          name: Release ${{ steps.tagName.outputs.tag }}
-          draft: true
-          prerelease: false
-          body_path: CHANGELOG.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create env file
         run: |
@@ -55,5 +38,5 @@ jobs:
         with:
           args: deploy --stage mainnet --region us-west-1
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.MAINNET_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.MAINNET_AWS_SECRET_ACCESS_KEY }}
