--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.7.1",
     "aws-lambda": "^1.0.6",
+    "date-fns": "^2.16.1",
     "fp-ts": "^2.7.0",
     "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^3.9.5"
