--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "typescript": "^3.9.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/aws-lambda": "^8.10.59",
-    "@types/node": "^14.0.13"
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.0.13",
+    "babel-jest": "^26.5.2",
+    "jest": "^26.5.3",
+    "monocle-ts": "^2.3.3"
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "license": "MIT"
 }
