--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Compile
         run: npm run typecheck
 
-#      - name: Test
-#        run: npm test
+      - name: Test
+        run: npm test
