--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Compile
-        run: npm run typecheck
+      - name: Test
+        run: npm test -- --coverage --ci
 
       - name: Create env file
         run: |
