--- a/serverless.yml
+++ b/serverless.yml
@@ -18,47 +18,23 @@ provider:
   versionFunctions: false
 
 functions:
-  snapshots:
-    handler: src/handler.snapshots
+  globalSnapshot:
+    handler: src/handler.globalSnapshot
     events:
       - httpApi:
-          path: /snapshot/{term}
+          path: /global-snapshot/{term}
           method: GET
-  checkpoint-blocks:
-    handler: src/handler.checkpointBlocks
+  globalSnapshotRewards:
+    handler: src/handler.globalSnapshotRewards
     events:
       - httpApi:
-          path: /checkpoint-block/{term}
+          path: /global-snapshot/latest/rewards
           method: GET
-  transactions:
-    handler: src/handler.transactions
+  balanceByAddress:
+    handler: src/handler.balanceByAddress
     events:
       - httpApi:
-          path: /transaction/{term}
-          method: GET
-  transactionsBySnapshot:
-    handler: src/handler.transactionsBySnapshot
-    events:
-      - httpApi:
-          path: /snapshot/{term}/transaction
-          method: GET
-  transactionsByAddress:
-    handler: src/handler.transactionsByAddress
-    events:
-      - httpApi:
-          path: /address/{term}/transaction
-          method: GET
-  transactionsBySender:
-    handler: src/handler.transactionsBySender
-    events:
-      - httpApi:
-          path: /address/{term}/transaction/sent
-          method: GET
-  transactionsByReceiver:
-    handler: src/handler.transactionsByReceiver
-    events:
-      - httpApi:
-          path: /address/{term}/transaction/received
+          path: /address/{term}/balance
           method: GET
 
 plugins:
