--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "node_modules/@types"
     ],
     "types": [
-      "node"
+      "node",
+      "jest"
     ],
     "rootDir": "./src"
   }
