Balance by address endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -66,6 +66,12 @@ functions:
       - httpApi:
           path: /address/{address}/transaction/received
           method: GET
+  balanceByAddress:
+    handler: src/handler.balanceByAddress
+    events:
+      - httpApi:
+          path: /address/{address}/balance/
+          method: GET
 
 plugins:
   - serverless-plugin-typescript
