Use proper API_ENV for testnet 2.0

--- a/.github/workflows/deploy_testnet_20.yml
+++ b/.github/workflows/deploy_testnet_20.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Create env file
         run: |
           cat > env.yml << EOF
-          ${{ secrets.API_ENV_20 }}
+          ${{ secrets.API_ENV }}
           EOF
 
       - name: Deploy
