--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "aws-lambda": "^1.0.6",
     "date-fns": "^2.16.1",
     "fp-ts": "^2.12.1",
+    "monocle-ts": "^2.3.13",
     "serverless-plugin-typescript": "^2.1.0",
-    "typescript": "^4.6.4",
-    "monocle-ts": "^2.3.13"
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -20,7 +20,8 @@
     "@types/jest": "^26.0.14",
     "@types/node": "^14.0.13",
     "babel-jest": "^26.5.2",
-    "jest": "^26.5.3"
+    "jest": "^26.5.3",
+    "prettier": "2.7.1"
   },
   "scripts": {
     "test": "jest"
