Update env.yml and serverless.yml

--- a/env.yml
+++ b/env.yml
@@ -1,2 +1,7 @@
 default:
-  opensearch: 'http://localhost:9200'
+  opensearch: 'http://20.249.7.13:9200'
+  vpc:
+      securityGroupIds:
+        - sg-09d66a53c342a6ed5
+      subnetIds:
+        - subnet-060b39ed7e0187167
