--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "babel-jest": "^26.5.2",
     "jest": "^26.6.3",
     "prettier": "2.7.1",
-    "serverless": "^3.22.0"
+    "serverless": "^3.22.0",
+    "serverless-offline": "^11.1.3"
   },
   "scripts": {
     "test": "jest"
