--- a/env.yml
+++ b/env.yml
@@ -1,2 +1,7 @@
 default:
-  opensearch: 'http://localhost:9200'
+  opensearch: 'http://54.235.210.75:9200'
+  vpc: 
+    securityGroupIds: 
+      - sg-09d66a53c342a6ed5
+    subnetIds:
+      - subnet-0653fda6bed341ae0
