--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "date-fns": "^2.16.1",
     "fp-ts": "^2.12.1",
     "monocle-ts": "^2.3.13",
-    "serverless-plugin-typescript": "^2.1.0",
+    "serverless": "^3.22.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
@@ -21,7 +21,9 @@
     "@types/node": "^14.0.13",
     "babel-jest": "^26.5.2",
     "jest": "^26.5.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "serverless-offline": "^11.1.0",
+    "serverless-plugin-typescript": "^2.1.4"
   },
   "scripts": {
     "test": "jest"
