--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@types/node": "^14.0.13",
     "babel-jest": "^26.5.2",
     "jest": "^26.5.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "serverless-offline": "^12.0.4"
   },
   "scripts": {
     "test": "jest"
