--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fp-ts": "^2.16.0",
     "monocle-ts": "^2.3.13",
     "serverless-plugin-typescript": "^2.1.5",
-    "typescript": "^5.1.3"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -22,7 +22,7 @@
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "prettier": "2.8.8",
-    "serverless-offline": "^13.0.0"
+    "serverless-offline": "^13.3.4"
   },
   "scripts": {
     "test": "jest",
